--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chart-race": "^0.0.3",
